--- a/cloudbuildconfig.yaml
+++ b/cloudbuildconfig.yaml
@@ -3,17 +3,17 @@ steps:
   id: Build Docker Image
   args: ['builds', 'submit', '--tag', 'gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}:${_IMAGE_TAG}', '.']
   waitFor: ['-']
-#- name: gcr.io/cloud-builders/gcloud
-#  args: ['beta',
-#         'dataflow',
-#         'flex-template',
-#         'build',
-#         'gs://${_BUCKET_NAME}/dataflow_templates/bq_to_csv_template.json',
-#         '--image=gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}:${_IMAGE_TAG}',
-#         '--sdk-language=PYTHON',
-#         '--metadata-file=pipeline_metadata.json'
+- name: gcr.io/cloud-builders/gcloud
+  args: ['beta',
+         'dataflow',
+         'flex-template',
+         'build',
+         'gs://${_BUCKET_NAME}/templates/gcs_to_bq_batch.json',
+         '--image=gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}:${_IMAGE_TAG}',
+         '--sdk-language=PYTHON',
+         '--metadata-file=metadata.json'
 #  ]
-#  waitFor: ['Build Docker Image']
+  waitFor: ['Build Docker Image']
 
 # req variables
 substitutions:
