--- a/cloudbuildconfig.yaml
+++ b/cloudbuildconfig.yaml
@@ -8,7 +8,7 @@ steps:
          'dataflow',
          'flex-template',
          'build',
-         'gs://${_BUCKET_NAME}/templates/gcs_to_bq_batch.json',
+         'gs://${_BUCKET_NAME}/templates/gcs_to_bq_batch',
          '--image=gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}:${_IMAGE_TAG}',
          '--sdk-language=PYTHON',
          '--metadata-file=metadata.json'
